# BookCreation-CrewAI

./: README.md
bookCreation/: README.md  pyproject.toml  report.md
bookCreation/src/bookcreation/: crew.py  main.py
bookCreation/src/krishna/: crew.py  main.py
krishna/: README.md  pyproject.toml  report.md
krishna/src/krishna/: crew.py  main.py
my_book/: README.md  pyproject.toml  types.py
my_book/src/my_book/: main.py
my_book/src/my_book/crews copy/write_book/: write_book.py
my_book/src/my_book/crews copy/write_book/config/: agents.yaml  tasks.yaml
my_book/src/my_book/crews/Outline_book/: Outline_book.py
my_book/src/my_book/crews/Outline_book/config/: agents.yaml  tasks.yaml
