[project]
name = "bookCreation"
version = "0.1.0"
description = "bookCreation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
bookCreation = "bookCreation.main:run"
run_crew = "bookCreation.main:run"
train = "bookCreation.main:train"
replay = "bookCreation.main:replay"
test = "bookCreation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
