[project]
name = "bookcreation"
version = "0.1.0"
description = "BookCreation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
bookcreation = "bookcreation.main:run"
run_crew = "bookcreation.main:run"
train = "bookcreation.main:train"
replay = "bookcreation.main:replay"
test = "bookcreation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
