[project]
name = "krishna"
version = "0.1.0"
description = "krishna using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
krishna = "krishna.main:run"
run_crew = "krishna.main:run"
train = "krishna.main:train"
replay = "krishna.main:replay"
test = "krishna.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
