[project]
name = "my_book"
version = "0.1.0"
description = "my-book using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
]

[project.scripts]
kickoff = "my_book.main:kickoff"
run_crew = "my_book.main:kickoff"
plot = "my_book.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
